路由跳转设置

--- a/src/pages/app/app.less
+++ b/src/pages/app/app.less
@@ -6,3 +6,9 @@
     top: 0;
     bottom: 0;
 }
+
+.mat-page-content {
+    overflow: auto;
+    margin: 24px 16px 0;
+    max-height: calc(100vh - 155px);
+}
