--- a/src/pages/app/app.less
+++ b/src/pages/app/app.less
@@ -12,3 +12,9 @@
     margin: 24px 16px 0;
     max-height: calc(100vh - 155px);
 }
+
+div[data-primitive] .shape{
+    flex: 0 0 auto;
+    width: 100%;
+    height: 250px;
+}
